Add Gist embedding
Add gist-embed jQuery plugin and include it on the public pages. Create plugin
for Summernote WYSIWYG editor and add it to the toolbar. Add XSS anti-sammy
config file and allow data-gist-* attributes. Update CSS for admin to show the
gist ID in the editor. Update CSS for public to not surround the gist code
elements in a well. Update Sightly and Sling XSS from 1.0.2 to 1.0.4.

Note: It seems you have to restart the Sling server for the XSS config to take
effect.

--- a/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/scripts.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/scripts.html
@@ -1,4 +1,5 @@
 <script src="/etc/clientlibs/foundation/jquery/dist/jquery.min.js"></script>
 <script src="/etc/clientlibs/foundation/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/etc/clientlibs/foundation/gist-embed/gist-embed.min.js"></script>
 <script src="/etc/clientlibs/foundation/publick/js/publick.js"></script>
 <script src='https://www.google.com/recaptcha/api.js'></script>
