Add PrismJS syntax highlighting
Add PrismJS JavaScript and CSS. Update gruntfile. Create Summernote HTML5 rich
text editor plugin for Prism. Update XSS config to allow data attributes needed
for PrismJS.

--- a/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/links.html
+++ b/ui/src/main/resources/jcr_root/libs/publick/pages/basicPage/links.html
@@ -1,2 +1,3 @@
 <link rel="stylesheet" href="/etc/clientlibs/foundation/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="/etc/clientlibs/foundation/publick/css/publick.css">
+<link rel="stylesheet" href="/etc/clientlibs/foundation/prismjs/prism.css">
